--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -50,11 +50,14 @@
                     <p:menuitem value="View Transport Order To Be Procssed" url="viewsourcetransportorder.xhtml"/>
                     <p:menuitem value="All IncomingTransport Orders" url="viewdesttransportorder.xhtml"/>
                 </p:submenu>
-                 <p:submenu label="Warehouse Request Orders" styleClass="display:block" >
-                    <p:menuitem value="Create Warehouse Request" url="createwarehouserequest.xhtml"/>
-                    <p:menuitem value="View All Orders" url="viewallpendingrequests.xhtml"/>
+                <p:submenu label="Internal Warehouse Request Orders" styleClass="display:block" >
+                    <p:menuitem value="Create Internal Warehouse Request" url="createinternalwo.xhtml"/>
                 </p:submenu>
-                <p:submenu label="Warehouse Service Fulfillment Check" >
+                <p:submenu label="External Warehouse Request Orders" styleClass="display:block" >
+                    <p:menuitem value="Create External Warehouse Request" url="createwarehouserequest.xhtml"/>
+                    <p:menuitem value="View All External Orders" url="viewallpendingrequests.xhtml"/>
+                </p:submenu>
+                <p:submenu label="Warehouse Space Fulfillment Check" >
                     <p:menuitem value="Fulfillment Check" url="warehouseservicefulfillmentcheck.xhtml" />
                 </p:submenu>
                 <p:submenu label="View Notification" >
